feature: local test setting
