# app/api/controller/kms.ctrl.go
@@ -2,7 +2,6 @@ package controller
 
 import (
 	"kms/wallet/app/api/model/dto"
-	"kms/wallet/app/api/model/res"
 	srv "kms/wallet/app/api/service"
 
 	"github.com/gofiber/fiber/v2"
@@ -13,16 +12,17 @@ type kmsCtrl struct {
 }
 
 func NewKmsCtrl(kmsSrv *srv.KmsSrv, router fiber.Router) *kmsCtrl {
-	ctrl := &kmsCtrl{kmsSrv}
+	c := &kmsCtrl{kmsSrv}
 
-	router.Post("/create/account", ctrl.CreateAccount)
-	router.Post("/import/account", ctrl.ImportAccount)
-	router.Get("/address/keyID/:keyID", ctrl.GetAddress)
-	router.Get("/account/list", ctrl.GetAccountList)
+	router.Post("/create/account", c.CreateAccount)
+	router.Post("/import/account", c.ImportAccount)
+	router.Get("/address/keyID/:keyID", c.GetAddress)
+	router.Get("/account/list", c.GetAccountList)
 
-	return ctrl
+	return c
 }
 
+// @tags Kms
 // @summary Get address of target key id
 // @produce json
 // @success 200 {object} res.AddressRes
@@ -31,17 +31,18 @@ func NewKmsCtrl(kmsSrv *srv.KmsSrv, router fiber.Router) *kmsCtrl {
 func (c *kmsCtrl) GetAddress(ctx *fiber.Ctx) error {
 	AddressDTO, errWrap := dto.ShouldBind[dto.AddressDTO](ctx.ParamsParser)
 	if errWrap != nil {
-		return res.ProcessErrRes(errWrap, ctx)
+		return errWrap.CombineLayer()
 	}
 
 	addressRes, errWrap := c.kmsSrv.GetAddress(AddressDTO)
 	if errWrap != nil {
-		return res.ProcessErrRes(errWrap, ctx)
+		return errWrap.CombineLayer()
 	}
 
 	return ctx.Status(fiber.StatusOK).JSON(addressRes)
 }
 
+// @tags Kms
 // @summary Get accounst list
 // @produce json
 // @success 200 {object} res.AccountListRes
@@ -50,17 +51,18 @@ func (c *kmsCtrl) GetAddress(ctx *fiber.Ctx) error {
 func (c *kmsCtrl) GetAccountList(ctx *fiber.Ctx) error {
 	accountListDTO, errWrap := dto.ShouldBind[dto.AccountListDTO](ctx.QueryParser)
 	if errWrap != nil {
-		return res.ProcessErrRes(errWrap, ctx)
+		return errWrap.CombineLayer()
 	}
 
 	accountListRes, errWrap := c.kmsSrv.GetAccountList(accountListDTO.Limit, accountListDTO.Marker)
 	if errWrap != nil {
-		return res.ProcessErrRes(errWrap, ctx)
+		return errWrap.CombineLayer()
 	}
 
 	return ctx.Status(fiber.StatusOK).JSON(accountListRes)
 }
 
+// @tags Kms
 // @summary Create new account
 // @produce json
 // @success 201 {object} res.AccountRes
@@ -68,25 +70,26 @@ func (c *kmsCtrl) GetAccountList(ctx *fiber.Ctx) error {
 func (c *kmsCtrl) CreateAccount(ctx *fiber.Ctx) error {
 	accountRes, errWrap := c.kmsSrv.CreateAccount()
 	if errWrap != nil {
-		return res.ProcessErrRes(errWrap, ctx)
+		return errWrap.CombineLayer()
 	}
 
 	return ctx.Status(fiber.StatusCreated).JSON(accountRes)
 }
 
+// @tags Kms
 // @summary Import account to kms
 // @produce json
 // @success 201 {object} res.AccountRes
 // @router  /api/import/account [post]
-// @param   subject body dto.ImportAddressDTO true "subject"
+// @param   subject body dto.ImportAccountDTO true "subject"
 func (c *kmsCtrl) ImportAccount(ctx *fiber.Ctx) error {
-	importAddressDTO, errWrap := dto.ShouldBind[dto.ImportAddressDTO](ctx.BodyParser)
+	importAddressDTO, errWrap := dto.ShouldBind[dto.ImportAccountDTO](ctx.BodyParser)
 	if errWrap != nil {
-		return res.ProcessErrRes(errWrap, ctx)
+		return errWrap.CombineLayer()
 	}
 	accountRes, errWrap := c.kmsSrv.ImportAccount(importAddressDTO.PK)
 	if errWrap != nil {
-		return res.ProcessErrRes(errWrap, ctx)
+		return errWrap.CombineLayer()
 	}
 
 	return ctx.Status(fiber.StatusCreated).JSON(accountRes)
