# app/api/controller/txn.ctrl.go
@@ -2,7 +2,6 @@ package controller
 
 import (
 	"kms/wallet/app/api/model/dto"
-	"kms/wallet/app/api/model/res"
 	srv "kms/wallet/app/api/service"
 
 	"github.com/gofiber/fiber/v2"
@@ -13,27 +12,28 @@ type txnCtrl struct {
 }
 
 func NewTxnCtrl(txnSrv *srv.TxnSrv, router fiber.Router) *txnCtrl {
-	ctrl := &txnCtrl{txnSrv}
+	c := &txnCtrl{txnSrv}
 
-	router.Post("/sign/txn", ctrl.SignSerializedTxn)
+	router.Post("/sign/txn", c.SignSerializedTxn)
 
-	return ctrl
+	return c
 }
 
+// @tags Transaction
 // @summary Sign serialized transaction.
 // @produce json
 // @success 201 {object} res.SingedTxnRes
 // @router  /api/sign/txn [post]
-// @param   subject body dto.TxnDTO true "subject"
+// @param   subject body dto.SerializedTxnDTO true "subject"
 func (c *txnCtrl) SignSerializedTxn(ctx *fiber.Ctx) error {
-	txnDTO, errWrap := dto.ShouldBind[dto.TxnDTO](ctx.BodyParser)
+	txnDTO, errWrap := dto.ShouldBind[dto.SerializedTxnDTO](ctx.BodyParser)
 	if errWrap != nil {
-		return res.ProcessErrRes(errWrap, ctx)
+		return errWrap.CombineLayer()
 	}
 
 	signedTxnRes, errWrap := c.txnSrv.SignSerializedTxn(txnDTO)
 	if errWrap != nil {
-		return res.ProcessErrRes(errWrap, ctx)
+		return errWrap.CombineLayer()
 	}
 
 	return ctx.Status(fiber.StatusCreated).JSON(signedTxnRes)
