# docs/swagger.json
@@ -1,209 +1,219 @@
 {
-    "swagger": "2.0",
-    "info": {
-        "contact": {}
-    },
-    "paths": {
-        "/api/account/list": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Get accounst list",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "example": 100,
-                        "name": "limit",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "name": "marker",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/res.AccountListRes"
-                        }
-                    }
-                }
+  "swagger": "2.0",
+  "info": {
+    "contact": {}
+  },
+  "paths": {
+    "/api/account/list": {
+      "get": {
+        "produces": ["application/json"],
+        "tags": ["Kms"],
+        "summary": "Get accounst list",
+        "parameters": [
+          {
+            "type": "integer",
+            "example": 100,
+            "name": "limit",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "name": "marker",
+            "in": "query"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/res.AccountListRes"
             }
-        },
-        "/api/address/keyID/{keyID}": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Get address of target key id",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "kms key-id",
-                        "name": "keyID",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/res.AddressRes"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/create/account": {
-            "post": {
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Create new account",
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/res.AccountRes"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/import/account": {
-            "post": {
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Import account to kms",
-                "parameters": [
-                    {
-                        "description": "subject",
-                        "name": "subject",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.ImportAddressDTO"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/res.AccountRes"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/sign/txn": {
-            "post": {
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Sign serialized transaction.",
-                "parameters": [
-                    {
-                        "description": "subject",
-                        "name": "subject",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.TxnDTO"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/res.SingedTxnRes"
-                        }
-                    }
-                }
-            }
+          }
         }
+      }
     },
-    "definitions": {
-        "dto.ImportAddressDTO": {
-            "type": "object",
-            "required": [
-                "pk"
-            ],
-            "properties": {
-                "pk": {
-                    "type": "string",
-                    "example": "637081577126ff5c2d327f992bd66548e00262578fd558d7fe272ef21b8bf825"
-                }
+    "/api/address/keyID/{keyID}": {
+      "get": {
+        "produces": ["application/json"],
+        "tags": ["Kms"],
+        "summary": "Get address of target key id",
+        "parameters": [
+          {
+            "type": "string",
+            "description": "kms key-id",
+            "name": "keyID",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/res.AddressRes"
             }
-        },
-        "dto.TxnDTO": {
-            "type": "object",
-            "required": [
-                "keyID",
-                "serializedTxn"
-            ],
-            "properties": {
-                "keyID": {
-                    "type": "string",
-                    "example": "f50a9229-e7c7-45ba-b06c-8036b894424e"
-                },
-                "serializedTxn": {
-                    "type": "string",
-                    "example": "0xea5685ba43b740008252089439e243a7f209932df41e1fc0a1ada51b3a04b46d018086059407ad8e8b8080"
-                }
-            }
-        },
-        "res.AccountListRes": {
-            "type": "object",
-            "properties": {
-                "accounts": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/res.AccountRes"
-                    }
-                },
-                "marker": {
-                    "type": "string",
-                    "example": "AE0AAAACAHMAAAAJYWNjb3VudElkAHMAAAAMOTg1MDk2Mzk3ODIxAHMAAAAEdGtJZABzAAAAJDQ0YTAzNWU2LTY1OTEtNDgwMC04YjcwLWM3MzNiNTI2MzljMw"
-                }
-            }
-        },
-        "res.AccountRes": {
-            "type": "object",
-            "properties": {
-                "address": {
-                    "type": "string",
-                    "example": "0x216690cD286d8a9c8D39d9714263bB6AB97046F3"
-                },
-                "keyID": {
-                    "type": "string",
-                    "example": "f50a9229-e7c7-45ba-b06c-8036b894424e"
-                }
-            }
-        },
-        "res.AddressRes": {
-            "type": "object",
-            "properties": {
-                "address": {
-                    "type": "string",
-                    "example": "0x216690cD286d8a9c8D39d9714263bB6AB97046F3"
-                }
-            }
-        },
-        "res.SingedTxnRes": {
-            "type": "object",
-            "properties": {
-                "signedTxn": {
-                    "type": "string",
-                    "example": "0xf86a5685ba43b740008252089439e243a7f209932df41e1fc0a1ada51b3a04b46d0180860b280f5b1d3aa00d2ea43cfd9b91151348d037a5a80293f543e1700a7019853f28063f6442c826a052a29797169740b1bc48962e197299061c8aa3314951a9c71418d19036604645"
-                }
-            }
+          }
         }
+      }
+    },
+    "/api/create/account": {
+      "post": {
+        "produces": ["application/json"],
+        "tags": ["Kms"],
+        "summary": "Create new account",
+        "responses": {
+          "201": {
+            "description": "Created",
+            "schema": {
+              "$ref": "#/definitions/res.AccountRes"
+            }
+          }
+        }
+      }
+    },
+    "/api/error": {
+      "get": {
+        "tags": ["Health"],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/health": {
+      "get": {
+        "tags": ["Health"],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/import/account": {
+      "post": {
+        "produces": ["application/json"],
+        "tags": ["Kms"],
+        "summary": "Import account to kms",
+        "parameters": [
+          {
+            "description": "subject",
+            "name": "subject",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/dto.ImportAccountDTO"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created",
+            "schema": {
+              "$ref": "#/definitions/res.AccountRes"
+            }
+          }
+        }
+      }
+    },
+    "/api/sign/txn": {
+      "post": {
+        "produces": ["application/json"],
+        "tags": ["Transaction"],
+        "summary": "Sign serialized transaction.",
+        "parameters": [
+          {
+            "description": "subject",
+            "name": "subject",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/dto.SerializedTxnDTO"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created",
+            "schema": {
+              "$ref": "#/definitions/res.SingedTxnRes"
+            }
+          }
+        }
+      }
     }
+  },
+  "definitions": {
+    "dto.ImportAccountDTO": {
+      "type": "object",
+      "required": ["pk"],
+      "properties": {
+        "pk": {
+          "type": "string",
+          "example": "637081577126ff5c2d327f992bd66548e00262578fd558d7fe272ef21b8bf825"
+        }
+      }
+    },
+    "dto.SerializedTxnDTO": {
+      "type": "object",
+      "required": ["keyID", "serializedTxn"],
+      "properties": {
+        "keyID": {
+          "type": "string",
+          "example": "f50a9229-e7c7-45ba-b06c-8036b894424e"
+        },
+        "serializedTxn": {
+          "type": "string",
+          "example": "0xea5685ba43b740008252089439e243a7f209932df41e1fc0a1ada51b3a04b46d018086059407ad8e8b8080"
+        }
+      }
+    },
+    "res.AccountListRes": {
+      "type": "object",
+      "properties": {
+        "accounts": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/res.AccountRes"
+          }
+        },
+        "marker": {
+          "type": "string",
+          "example": "AE0AAAACAHMAAAAJYWNjb3VudElkAHMAAAAMOTg1MDk2Mzk3ODIxAHMAAAAEdGtJZABzAAAAJDQ0YTAzNWU2LTY1OTEtNDgwMC04YjcwLWM3MzNiNTI2MzljMw"
+        }
+      }
+    },
+    "res.AccountRes": {
+      "type": "object",
+      "properties": {
+        "address": {
+          "type": "string",
+          "example": "0x216690cD286d8a9c8D39d9714263bB6AB97046F3"
+        },
+        "keyID": {
+          "type": "string",
+          "example": "f50a9229-e7c7-45ba-b06c-8036b894424e"
+        }
+      }
+    },
+    "res.AddressRes": {
+      "type": "object",
+      "properties": {
+        "address": {
+          "type": "string",
+          "example": "0x216690cD286d8a9c8D39d9714263bB6AB97046F3"
+        }
+      }
+    },
+    "res.SingedTxnRes": {
+      "type": "object",
+      "properties": {
+        "signedTxn": {
+          "type": "string",
+          "example": "0xf86a5685ba43b740008252089439e243a7f209932df41e1fc0a1ada51b3a04b46d0180860b280f5b1d3aa00d2ea43cfd9b91151348d037a5a80293f543e1700a7019853f28063f6442c826a052a29797169740b1bc48962e197299061c8aa3314951a9c71418d19036604645"
+        }
+      }
+    }
+  }
 }
